--- a/src/pages/book.astro
+++ b/src/pages/book.astro
@@ -5,7 +5,7 @@ import Button from "@components/ui/button.astro";
 import { loadStripe } from "@stripe/stripe-js";
 ---
 
-const stripePromise = loadStripe("YOUR_PUBLIC_STRIPE_KEY");
+const stripePromise = loadStripe("pk_live_51Q8tiiD3zf1H8CLSz1p44ij9VcimA1ZyWqyHknXNsd2wNJqvY2GxTIE5QG0410dyS9512jiycdSBLgFjgidoQzvz00GAtZMlHu");
 
 <Layout title="Book Our Services">
   <Container>
