--- a/src/pages/book.astro
+++ b/src/pages/book.astro
@@ -19,7 +19,7 @@ const stripePromise = loadStripe("pk_live_51Q8tiiD3zf1H8CLSz1p44ij9VcimA1ZyWqyHk
           <h4 class="text-2xl font-bold text-primary mb-4">Landscaping</h4>
           <p class="text-textDark mb-6">Transform your outdoor space with our expert landscaping services.</p>
           <Button
-            onClick={() => handleBooking("price_12345")} // Replace "price_12345" with your actual price ID
+            onClick={() => handleBooking("prod_R0vscIVM5pEp7y")} // Replace "price_12345" with your actual price ID
             type="button"
             class="bg-accent1 text-white hover:bg-accent2 inline-block px-8 py-4 rounded-full font-bold"
           >
@@ -30,7 +30,7 @@ const stripePromise = loadStripe("pk_live_51Q8tiiD3zf1H8CLSz1p44ij9VcimA1ZyWqyHk
           <h4 class="text-2xl font-bold text-primary mb-4">Mowing</h4>
           <p class="text-textDark mb-6">Keep your lawn looking pristine with our regular mowing services.</p>
           <Button
-            onClick={() => handleBooking("price_67890")} // Replace "price_67890" with your actual price ID
+            onClick={() => handleBooking("prod_R0vscIVM5pEp7y")} // Replace "price_67890" with your actual price ID
             type="button"
             class="bg-accent1 text-white hover:bg-accent2 inline-block px-8 py-4 rounded-full font-bold"
           >
@@ -41,7 +41,7 @@ const stripePromise = loadStripe("pk_live_51Q8tiiD3zf1H8CLSz1p44ij9VcimA1ZyWqyHk
           <h4 class="text-2xl font-bold text-primary mb-4">Tree Planting</h4>
           <p class="text-textDark mb-6">Add beauty and value to your property with our tree planting services.</p>
           <Button
-            onClick={() => handleBooking("price_abcde")} // Replace "price_abcde" with your actual price ID
+            onClick={() => handleBooking("prod_R0vscIVM5pEp7y")} // Replace "price_abcde" with your actual price ID
             type="button"
             class="bg-accent1 text-white hover:bg-accent2 inline-block px-8 py-4 rounded-full font-bold"
           >
@@ -52,7 +52,7 @@ const stripePromise = loadStripe("pk_live_51Q8tiiD3zf1H8CLSz1p44ij9VcimA1ZyWqyHk
           <h4 class="text-2xl font-bold text-primary mb-4">General Maintenance</h4>
           <p class="text-textDark mb-6">Book our maintenance services to keep your property in top shape.</p>
           <Button
-            onClick={() => handleBooking("price_fghij")} // Replace "price_fghij" with your actual price ID
+            onClick={() => handleBooking("prod_R0vscIVM5pEp7y")} // Replace "price_fghij" with your actual price ID
             type="button"
             class="bg-accent1 text-white hover:bg-accent2 inline-block px-8 py-4 rounded-full font-bold"
           >
