--- a/src/pages/book.astro
+++ b/src/pages/book.astro
@@ -3,6 +3,8 @@ import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Button from "@components/ui/button.astro";
 import { loadStripe } from "@stripe/stripe-js";
+
+const stripePromise = loadStripe("pk_live_51Q8tiiD3zf1H8CLSz1p44ij9VcimA1ZyWqyHknXNsd2wNJqvY2GxTIE5QG0410dyS9512jiycdSBLgFjgidoQzvz00GAtZMlHu");
 ---
 
 <Layout title="Book Our Services">
@@ -69,7 +71,7 @@ import { loadStripe } from "@stripe/stripe-js";
 
   async function handleBooking(priceId) {
     const stripe = await stripePromise;
-    const response = await fetch("/create-payment-intent", {
+    const response = await fetch("https://www.walker-cole.com/create-payment-intent", {
       method: "POST",
       headers: {
         "Content-Type": "application/json",
