--- a/src/pages/book.astro
+++ b/src/pages/book.astro
@@ -2,7 +2,7 @@
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Button from "@components/ui/button.astro";
-import { handleBooking } from "../../components/stripeBooking.js";
+import { handleBooking } from "@components/stripeBooking.js";
 
 ---
 
