--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -35,10 +35,10 @@ const menuitems = [
     title: "Services",
     path: "/services",
   },
-  {
-    title: "Book Now",
-    path: "/book",
-  },
+ // {
+ //   title: "Book Now",
+ //   path: "/book",
+ // },
  // {
  //   title: "Blog",
  //   path: "/blog",
