--- a/src/pages/book.astro
+++ b/src/pages/book.astro
@@ -16,7 +16,7 @@ import { handleBooking } from "@components/stripeBooking.js";
         <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition text-center">
           <h4 class="text-2xl font-bold text-primary mb-4">Landscaping</h4>
           <p class="text-textDark mb-6">Transform your outdoor space with our expert landscaping services.</p>
-          <Button client:load
+          <Button
             onClick={() => handleBooking("prod_R0vscIVM5pEp7y")}
             type="button"
             class="bg-accent1 text-white hover:bg-accent2 inline-block px-8 py-4 rounded-full font-bold"
@@ -27,7 +27,7 @@ import { handleBooking } from "@components/stripeBooking.js";
         <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition text-center">
           <h4 class="text-2xl font-bold text-primary mb-4">Mowing</h4>
           <p class="text-textDark mb-6">Keep your lawn looking pristine with our regular mowing services.</p>
-          <Button client:load
+          <Button
             onClick={() => handleBooking("prod_R0vscIVM5pEp7y")}
             type="button"
             class="bg-accent1 text-white hover:bg-accent2 inline-block px-8 py-4 rounded-full font-bold"
@@ -38,7 +38,7 @@ import { handleBooking } from "@components/stripeBooking.js";
         <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition text-center">
           <h4 class="text-2xl font-bold text-primary mb-4">Tree Planting</h4>
           <p class="text-textDark mb-6">Add beauty and value to your property with our tree planting services.</p>
-          <Button client:load
+          <Button
             onClick={() => handleBooking("prod_R0vscIVM5pEp7y")}
             type="button"
             class="bg-accent1 text-white hover:bg-accent2 inline-block px-8 py-4 rounded-full font-bold"
@@ -49,7 +49,7 @@ import { handleBooking } from "@components/stripeBooking.js";
         <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition text-center">
           <h4 class="text-2xl font-bold text-primary mb-4">General Maintenance</h4>
           <p class="text-textDark mb-6">Book our maintenance services to keep your property in top shape.</p>
-          <Button client:load
+          <Button
             onClick={() => handleBooking("prod_R0vscIVM5pEp7y")}
             type="button"
             class="bg-accent1 text-white hover:bg-accent2 inline-block px-8 py-4 rounded-full font-bold"
