Revert "Update button.astro"
This reverts commit b93e96906349f427f8c3440ea1fc48f411f15769.

--- a/src/components/ui/button.astro
+++ b/src/components/ui/button.astro
@@ -22,21 +22,19 @@ const sizes = {
 
 const styles = {
   outline: "border-2 border-black hover:bg-black text-black hover:text-white",
-  primary: "bg-black text-white hover:bg-slate-900 border-2 border-transparent",
+  primary:
+    "bg-black text-white hover:bg-slate-900  border-2 border-transparent",
 };
 ---
 
 <button
   {...rest}
-  class={
-    [
-      "rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200",
-      block ? "w-full" : "",
-      sizes[size],
-      styles[style],
-      className
-    ].filter(Boolean).join(" ")
-  }
->
-  <slot />
+  class:list={[
+    "rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200",
+    block && "w-full",
+    sizes[size],
+    styles[style],
+    className,
+  ]}
+  ><slot />
 </button>
