--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,13 +5,17 @@ import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
+import ArtificialGrass from "@components/artificial-grass.astro";
+import Testimonials from "@components/testimonials.astro";
 ---
 
-<Layout title="">
+<Layout title="Walker and Cole Construction">
   <Container>
     <Hero />
+    <ArtificialGrass />
     <Features />
     <Logos />
+    <Testimonials />
     <Cta />
   </Container>
 </Layout>
