--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
-import ArtificialGrass from "@components/artifical-grass.astro";
+import Artificialgrass from "@components/artificialgrass.astro";
 ---
 
 <Layout title="Walker and Cole Construction">
