--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,12 +6,13 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Artificialgrass from "@components/artificialgrass.astro";
+import Testimonials from "@components/testimonials.astro";
 ---
 
 <Layout title="Walker and Cole Construction">
   <Container>
     <Hero />
-    <ArtificialGrass />
+    <Artificialgrass />
     <Features />
     <Logos />
     <Cta />
