--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,7 @@ import Testimonials from "@components/testimonials.astro";
   <Container>
     <Hero />
     <Artificialgrass />
+    <Testimonials />
     <Features />
     <Logos />
     <Cta />
