--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,9 +21,14 @@ const values = [
 
 const teamMembers = [
   {
-    name: "Samuel Safahi",
+    name: "Joaquin Gutierrez",
     title: "Founder & CEO",
-    description: "With a passion for construction and a decade of experience in the industry, Samuel leads our company with dedication and a hands-on approach."
+    description: "With a passion for construction and a decade of experience in the industry, Joaquin leads our company with dedication and a hands-on approach."
+  },
+  {
+    name: "Samuel Safahi",
+    title: "Lead Labor",
+    description: "Great at labor."
   },
   {
     name: "Zachary Lakin",
